feat: Adiciona tela de login e validação de usuário

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/firestore": "^20.1.0",
     "@react-native-firebase/storage": "^20.1.0",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
     "@types/react-icons": "^3.0.0",
@@ -23,6 +24,7 @@
     "expo": "~51.0.8",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
+    "install": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
