--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@firebase/firestore": "^4.6.3",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.1.0",
     "@react-native-firebase/firestore": "^20.1.0",
@@ -22,6 +23,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "expo": "~51.0.8",
+    "expo-image-picker": "~15.0.5",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
     "install": "^0.13.0",
@@ -32,8 +34,7 @@
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11",
-    "typescript": "~5.3.3",
-    "expo-image-picker": "~15.0.5"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
