--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-native": "0.74.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11",
