--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/auth": "^20.1.0",
     "@react-native-firebase/firestore": "^20.1.0",
     "@react-native-firebase/storage": "^20.1.0",
+    "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
@@ -31,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-native": "0.74.1",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.23.1",
