--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@react-native-firebase/auth": "^20.1.0",
     "@react-native-firebase/firestore": "^20.1.0",
     "@react-native-firebase/storage": "^20.1.0",
-    "@react-navigation/drawer": "^6.7.0",
     "@react-native-picker/picker": "^2.7.7",
+    "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
@@ -27,6 +27,7 @@
     "@types/styled-components": "^5.1.34",
     "expo": "~51.0.8",
     "expo-image-picker": "~15.0.5",
+    "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
     "install": "^0.13.0",
@@ -36,6 +37,7 @@
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-maps": "^1.15.6",
+    "react-native-reanimated": "^3.10.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.23.1",
