--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo": "~51.0.8",
     "expo-image-picker": "~15.0.5",
     "expo-linear-gradient": "^13.0.2",
+    "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
     "install": "^0.13.0",
